11-cfn-init/11-05-cfn-init-v5-sources.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Cfn-init example and test this template in ohio us-east-2 region


Parameters:
  ImageId:
    Type: String
    Description: Default Imageid for ohio us-east-2 region
    Default: ami-0cd3dfa4e37921605
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Choose the EC2 Key
  InstanceType:
    Type: String
    Description: Default Instance type is t2.micro
    Default: t2.micro
  



Resources:
  TestSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: TestSG
      SecurityGroupIngress:
        - IpProtocol: tcp
          ToPort: 22
          FromPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          ToPort: 8080
          FromPort: 8080
          CidrIp: 0.0.0.0/0
  
  TestEC2:
    Type: AWS::EC2::Instance
    Metadata:
      Comment: Deploy a simple tomcat package
      AWS::CloudFormation:Init:
        config:
          packages:
            yum:
              java-1.8.0-openjdk.x86_64: []
              java-1.8.0-openjdk-devel: []
              tomcat8: []
          groups:
            groupone: {}
            grouptwo:
              - gid : "502"
            sachingroup: {}
          users:
            user1:
              groups:
                - groupone
                - grouptwo
                - sachingroup
              uid: "501"
              homeDir: "/home"
          sources:
            /tmp: "https://sachinpitaledevops1234.s3.amazonaws.com/CFN-INIT/demo1.zip"
          files:
          commands:
          services:          
    Properties:
      ImageId:  !Ref ImageId
      KeyName:  !Ref KeyName
      InstanceType: !Ref InstanceType
      SecurityGroups:
        - !Ref TestSecurityGroup
